model refinement